[gd_scene load_steps=16 format=3 uid="uid://cli47i1rl5e7h"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_6jmc1"]
[ext_resource type="FontFile" uid="uid://2q0n6dvgr2n3" path="res://Common/Fonts/constan.ttf" id="2_cvrqq"]
[ext_resource type="FontFile" uid="uid://d30lsvvnwjsg3" path="res://Common/Fonts/courbd.ttf" id="2_p3svu"]
[ext_resource type="Script" path="res://Menus/start_chevron_label.gd" id="2_w8s8c"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4un3s"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_4ljd8"]
offsets = PackedFloat32Array(0.0327869, 0.245902, 0.811475, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_84wtd"]
gradient = SubResource("Gradient_4ljd8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nw1n5"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 540, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 0.5
initial_velocity_max = 1.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
color_ramp = SubResource("GradientTexture1D_84wtd")
anim_offset_max = 1.0

[sub_resource type="FontVariation" id="FontVariation_jtvjw"]
base_font = ExtResource("2_cvrqq")
spacing_glyph = 18

[sub_resource type="LabelSettings" id="LabelSettings_q00kr"]
font = SubResource("FontVariation_jtvjw")
font_size = 200
shadow_size = 11
shadow_color = Color(3.85046e-07, 0.379517, 0.204635, 1)
shadow_offset = Vector2(7, 3)

[sub_resource type="LabelSettings" id="LabelSettings_6wime"]
font = ExtResource("2_p3svu")
font_size = 25
font_color = Color(0.227451, 0.74902, 0.121569, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2iauo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w7vye"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g7qen"]

[sub_resource type="LabelSettings" id="LabelSettings_7jakx"]
font = ExtResource("2_p3svu")
font_size = 25
font_color = Color(0.227451, 0.74902, 0.121569, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_6jmc1")

[node name="BlackBackground" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0430392, 0.0430392, 0.0430392, 1)

[node name="StarsParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_4un3s")
position = Vector2(960, 540)
amount = 100
process_material = SubResource("ParticleProcessMaterial_nw1n5")
lifetime = 60.0
preprocess = 60.0
fixed_fps = 0
visibility_rect = Rect2(-960, -540, 1920, 1080)

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 454.0
offset_top = 260.0
offset_right = 1437.0
offset_bottom = 461.0
grow_horizontal = 2
text = "ODYSSEA"
label_settings = SubResource("LabelSettings_q00kr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuBox" type="ColorRect" parent="."]
offset_left = 685.0
offset_top = 550.0
offset_right = 1235.0
offset_bottom = 750.0
color = Color(0.226967, 0.74717, 0.121913, 1)

[node name="MenuBoxInner" type="ColorRect" parent="MenuBox"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 545.0
offset_bottom = 195.0
color = Color(0, 0, 0, 1)

[node name="EnterCommandLabel" type="Label" parent="MenuBox"]
layout_mode = 0
offset_left = 20.0
offset_top = 15.0
offset_right = 230.0
offset_bottom = 44.0
text = "ENTER COMMAND:"
label_settings = SubResource("LabelSettings_6wime")

[node name="StartButton" type="Button" parent="MenuBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -10.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.227451, 0.74902, 0.121569, 1)
theme_override_fonts/font = ExtResource("2_p3svu")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxEmpty_2iauo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2iauo")
text = "BEGIN JOURNEY"
alignment = 0

[node name="ExitButton" type="Button" parent="MenuBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = 30.0
offset_right = -23.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.227451, 0.74902, 0.121569, 1)
theme_override_fonts/font = ExtResource("2_p3svu")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxEmpty_w7vye")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g7qen")
text = "EXIT"
alignment = 0

[node name="ChevronTimer" type="Timer" parent="MenuBox"]
wait_time = 0.5
autostart = true

[node name="ChevronLabel" type="Label" parent="MenuBox"]
layout_mode = 0
offset_left = 25.0
offset_top = 95.0
offset_right = 43.0
offset_bottom = 124.0
text = ">"
label_settings = SubResource("LabelSettings_7jakx")
script = ExtResource("2_w8s8c")

[node name="ControlsLabel" type="RichTextLabel" parent="MenuBox"]
layout_mode = 0
offset_left = 10.0
offset_top = 210.0
offset_right = 540.0
offset_bottom = 237.0
theme_override_colors/default_color = Color(0.227451, 0.74902, 0.121569, 1)
theme_override_fonts/normal_font = ExtResource("2_p3svu")
theme_override_font_sizes/normal_font_size = 21
text = "Pilot your vessel using WASD or arrow keys"

[connection signal="mouse_entered" from="MenuBox/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="MenuBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="MenuBox/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="MenuBox/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="MenuBox/ChevronTimer" to="MenuBox/ChevronLabel" method="_on_chevron_timer_timeout"]
